# Moulinette_missions

./: .gitignore  .pre-commit-config.yaml  Empr_missions_vJulie_sept.py  README.md  julie.py  libs.py  moulinette.py  pyproject.toml  requirements.txt
Data/: MIS_2022_extrait.xlsx  MIS_2022_extrait_CO2.xlsx  MIS_2022_v2_aller_simple_CO2.xlsx  MIS_2022_v3_aller_simple.xlsx  config_file_LMD_CNRS_2022.cfg  config_file_LMD_ENS_2022.cfg  geocache.json
Data/Config/: config_file_LMD_2019.cfg  config_file_LMD_CNRS_2020 (copy).cfg  config_file_LMD_CNRS_2021.cfg  config_file_LMD_CNRS_2022.cfg  config_file_LMD_ENS_2022.cfg  config_file_ex.cfg  geocache.json
Data/Raw/: BilanMissions_test.xlsx  Calcul de l'empreinte carbone 2022 - Missions_LOCEAN.xlsx  MIS_2019_tout.xlsx  MIS_2020.xlsx  MIS_2021.xlsx  MIS_2022_extrait.xlsx  MIS_2022_v2_aller_simple.xlsx  MIS_2022_v3_aller_simple.xlsx  Missions_LMD_ENS_2022.xlsx  Missions_ex_file.xlsx
Libs/: EasyEnums.py  EmissionsCalculator.py  Excel.py  Geo.py  MissionsLoader.py  VisualMap.py  misc.py
