[tool.poetry]
name = "moulinette-missions"
version = "0.1.0"
description = "Compute CO2e emissions from LMD travel data"
authors = ["Julie André <julie.andre@lmd.ipsl.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
geopy = "^2.4.0"  # resolve places
configparser = "^6.0.0"  # read config files
numpy = "^1.26.0"  # maths
pandas = "^2.1.1"  # ^
odfpy = "^1.4.1"  # manipulate spreadsheet
openpyxl = "^3.1.2"  #  ^
orjson = "^3.9.9"  # manipulate json


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
