[tool.poetry]
name = "moulinette-missions"
version = "0.1.0"
description = "Compute CO2e emissions from LMD travel data"
authors = ["Julie André <julie.andre@lmd.ipsl.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
geopy = "^2.4.0"  # resolve places
configparser = "^6.0.0"  # read config files
numpy = "^1.26.0"  # maths
pandas = "^2.1.1"  # ^
odfpy = "^1.4.1"  # manipulate spreadsheet
openpyxl = "^3.1.2"  #  ^
orjson = "^3.9.9"  # manipulate json
xlsxwriter = "^3.1.8"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pycln = "^2.3.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pre-commit config
[tool.black]
line-length = 160

[tool.pycln]
all = true

[tool.isort]
line_length = 160
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
