[project]
name = "moulinette-missions"
version = "0.3.0"
description = "Compute CO2e emissions from LMD travel data"
authors = {name="Julie André", emil="julie.andre@lmd.ipsl.fr"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "basemap>=2.0.0",
    "configparser~=6.0.0",
    "geopy~=2.4.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]


# pre-commit config
[tool.ruff]
line-length = 160
target-version = "py311"
ignore = ["E731"]
